# pitbox-ai

./: .env.example  .gitignore  CODE_STYLE.md  LICENSE  Makefile  README.md  README_MCP_INTEGRATION.md  api_server.py  langgraph.json  pyproject.toml  run_pitbox.py  test_mcp_integration.py
app/: __init__.py  models.py  state.py
app/graphs/: analytics_agent.py  simple_pitbox.py
app/knowledge/: drivers.json  glossary.json  nascar_glossary.txt  nascar_tracks.txt  trackhouse_team.txt
app/simulator/: __init__.py  main.py
app/tools/: __init__.py  mcp_client.py  rag_knowledge.py  simulator_api.py
evaluation/: eval_harness.py  golden_dataset.json  ragas_evaluation.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatContainer.jsx  FloatingCar.jsx  Header.jsx  Message.jsx  MessageInput.jsx  RaceTracker.jsx  SpeedLines.jsx  TypingIndicator.jsx  WelcomeScreen.jsx
mcp_server/: __init__.py  requirements.txt  server.py
mcp_server/tools/: __init__.py  analysis.py  car_data.py  content.py  pit_stop.py  race_status.py  system_status.py  telemetry.py  utils.py
scripts/: watch-quality.sh
tests/integration/: test_rag_knowledge.py
web_client/: index.html
