[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pitbox-ai"
version = "0.1.0"
description = "NASCAR Pit Box AI Assistant"
authors = [
    {name = "Trackhouse Racing", email = "dev@trackhouse.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "qdrant-client>=1.10.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "fastmcp>=2.11.3",
    "langchain-qdrant>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

